# backend-tutorcito

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Procfile  docker-compose.yaml  dockerfile  opencode.json  opencode.jsonc  pyproject.toml
apps/docs/: llms_generator.py  urls.py  views.py
apps/documents/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
apps/documents/migrations/: 0001_initial.py  0002_block_page_alter_block_document_alter_block_user.py  0003_rename_document_block_document_id_and_more.py  0004_rename_document_id_block_document_and_more.py
apps/exams/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
apps/exams/migrations/: 0001_initial.py  0002_alter_exam_result.py  0002_rename_document_exam_document_id_and_more.py  0003_remove_exam_result.py  0003_rename_document_id_exam_document_and_more.py  0004_create_examattempt.py  0005_rename_exams_exama_user_comp_idx_exams_exama_user_id_df4f06_idx_and_more.py
apps/users/: authentication.py  models.py  urls.py  views.py  viewsets.py
apps/users/migrations/: 0001_initial.py  0002_user_created_at_user_supabase_id_user_updated_at_and_more.py  0003_remove_user_supabase_id_user_clerk_id.py
core/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
